--- a/angular/angular.json
+++ b/angular/angular.json
@@ -70,6 +70,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+              "disableHostCheck": true,
+              "proxyConfig": "src/proxy.config.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "angular:build:production"
