--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,11 +24,16 @@
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [5000],
+	"forwardPorts": [8000, 4200],
 
 	"portsAttributes": {
 		"8000": {
 			"label": "GoApi",
+			"onAutoForward": "notify",
+			"visibility": "public"
+		},
+		"4200": {
+			"label": "Angular",
 			"onAutoForward": "notify",
 			"visibility": "public"
 		}
