--- a/angular/package.json
+++ b/angular/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.5",
     "@ngrx/effects": "^13.1.0",
     "@ngrx/store": "^13.1.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
