--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,6 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.203.0/containers/ubuntu
 {
 	"name": "Ubuntu",
-	"runArgs": ["--init"],
 	"build": {
 		"dockerfile": "Dockerfile",
 		// Update 'VARIANT' to pick an Ubuntu version: hirsute, focal, bionic
@@ -23,21 +22,28 @@
         "GitHub.copilot"
 	],
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [8000, 4200],
+	// // Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [5000, 4200],
 
-	"portsAttributes": {
-		"8000": {
-			"label": "GoApi",
-			"onAutoForward": "notify",
-			"visibility": "public"
-		},
-		"4200": {
-			"label": "Angular",
-			"onAutoForward": "notify",
-			"visibility": "public"
-		}
-	},
+	// "portsAttributes": {
+	// 	"5000": {
+	// 		"label": "GoApi",
+	// 		"onAutoForward": "notify"
+	// 	},
+	// 	"4200": {
+	// 		"label": "Angular",
+	// 		"onAutoForward": "notify"
+	// 	}
+	// },
+
+	"mounts": ["source=codespaces-linux-var-lib-docker,target=/var/lib/docker,type=volume"],
+	"runArgs": [
+		"--cap-add=SYS_PTRACE",
+		"--security-opt",
+		"seccomp=unconfined",
+		"--privileged",
+		"--init"
+	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "./.devcontainer/postCreateCommand.sh",
