--- a/angular/angular.json
+++ b/angular/angular.json
@@ -32,6 +32,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/assets/scss/styles.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -105,6 +106,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/assets/scss/styles.scss",
               "src/styles.scss"
             ],
             "scripts": []
