--- a/angular/angular.json
+++ b/angular/angular.json
@@ -73,6 +73,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+              "host": "0.0.0.0",
               "disableHostCheck": true,
               "proxyConfig": "src/proxy.config.json"
           },
