--- a/angular/tsconfig.app.json
+++ b/angular/tsconfig.app.json
@@ -3,11 +3,14 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+        "@store/*": ["src/app/store/*"],
+        "@src/*": ["src/*"]
+    }
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
