fix: Update build command to include all API files for compilation

--- a/server/.air.toml
+++ b/server/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o ./tmp/application ./main.go"
+cmd = "go build -o ./tmp/application ./cmd/api/*.go"
 # Binary file yields from `cmd`.
 bin = "./tmp/application"
 # Customize binary.
