--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -5,6 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Package",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "cmd/api/",
+      "cwd": "${workspaceFolder}",
+      "env": {},
+      "args": []
+    },
+    {
       "type": "bashdb",
       "request": "launch",
       "name": "Bash-Debug (simplest configuration)",
